# hms-utils

./: .gitignore  .gitleaks.toml  CHANGELOG.rst  LICENSE.txt  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: main-publish.yml  main-publish.yml-inactive  main.yml
src/hms_utils/: arg_utils.py  argv.py  aws_ecs.py  aws_env.install.bash  aws_env.py  aws_env.sh  aws_url_accounting.py  aws_url_accounting_uniques.py  awsecs.py  awsenv.py  awsenv.sh  chars.py  crypt_utils.py  crypto_utils.py  datetime_utils.py  dictionary_parented.py  dictionary_print_utils.py  dictionary_utils.py  elasticsearch_utils.py  env_utils.py  github_utils.py  hms_config.py  hms_config.sh  hms_config_backup.py  hms_config_rewriting.py  hmsconfig.py  json_utils.py  misc_utils.py  parented_json.py  path_utils.py  portalenv.py  print_tree.py  terminal_utils.py  threading_utils.py  type_utils.py  version_utils.py
src/hms_utils/aws/codebuild/: utils.py
src/hms_utils/cli/: crypt_cli.py
src/hms_utils/config/: READmE  cli.py  cli.sh  config.py  config_basic.py  config_cli.py  config_output.py  config_with_aws_macros.py  config_with_secrets.py  hms_config.py  hms_config_aws_secrets.py  hmsconfig.sh  utils.py
src/hms_utils/dev/: es-results.py  recent_files_summary.py  recent_files_summary_old.py  recent_released_files.py  work.py
src/hms_utils/iterm/: iterm_json_component.py  iterm_utc_clock.py  iterm_utils.py
src/hms_utils/portal/: generate_local_access_key.py  indexing_status.py  portal_envs.py  portal_files.py  portal_generate_access_key.py  portal_item_conflicts.py  portal_permissions.py  portal_read.py  portal_reindex_items.py  portal_simple_update.py  portal_submitted_file_summary.py  portal_user_update.py  portal_users.py  portal_utils.py  portal_validation_errors.py  portal_write.py  update_portal_object.py  view_portal_object.py
src/hms_utils/portal/one_offs/: add_consortia_to_portal_items.py  portal_without_consortia.py
src/hms_utils/portal/oneoff/: check_for_duplicate_md5sum.py  portal_add_consortia_to_items.py  portal_items_without_consortia.py  portal_permissions_debugging.py  randomize_md5sum_values.py  sanity_check_smaht_users_spreadsheet.py
src/hms_utils/portal/users/: sanity_check_smaht_users_spreadsheet.py
tests/: test_arg_utils.py  test_config.py  test_dictionary_utils.py  test_hms_config.py  test_hms_config_rewriting.py  test_hmsconfig.py  test_json_utils.py  test_portal_utils.py
tests/data/: config_a.json  files_for_dictionary_utils_group_items_for_testing.json  files_for_portal_utils_group_item_by_testing.json  secrets_a.json  secrets_but_not_really_a.json
