[tool.poetry]
name = "hms-utils"
version = "1.2.2"
description = "Miscellaneous Python utilities from HMS DBMI"
authors = ["Davd Michaels <david_michaels@4hms.harvard.deu>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/smaht-dac/hms-utils"
repository = "https://github.com/smaht-dac/hms-utils.git"
documentation = "https://github.com/smaht-dac/hms-utils"
packages = [{include="hms_utils", from="src"}]

[tool.setuptools]
packages = ["hms_utils"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
boto3 = "^1.35.10"
botocore = "^1.35.10"
dcicutils = "^8.14.3"
importlib = "^1.0.4"
requests = "^2.23.2"
termcolor = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
pytest = "^7.4.2"
pytest-cov = ">=2.7.1"
pytest-mock = ">=1.11.0"
pytest-redis = "^3.0.2"
pytest-runner = ">=5.1"

[tool.poetry.scripts]
hms-aws-ecs = "hms_utils.aws_ecs:main"
hms-aws-env = "hms_utils.aws_env:main"
hms-config = "hms_utils.hms_config:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
requires = ["setuptools>=74.0.0", "wheel"]
build-backend = "setuptools.build_meta"
