[tool.poetry]
name = "hms-utils"
version = "1.4.53"
description = "Miscellaneous Python utilities from HMS DBMI"
authors = ["Davd Michaels <david_michaels@4hms.harvard.deu>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/smaht-dac/hms-utils"
repository = "https://github.com/smaht-dac/hms-utils.git"
documentation = "https://github.com/smaht-dac/hms-utils"
packages = [{include="hms_utils", from="src"}]

[tool.setuptools]
packages = ["hms_utils"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
boto3 = "^1.35.22"
botocore = "^1.35.14"
dcicutils = "^8.14.3"
importlib = "^1.0.4"
requests = "^2.23.2"
termcolor = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
pytest = "^7.4.2"
pytest-cov = ">=2.7.1"
pytest-mock = ">=1.11.0"
pytest-redis = "^3.0.2"
pytest-runner = ">=5.1"

[tool.poetry.scripts]
hms-aws-ecs = "hms_utils.aws_ecs:main"
hms-aws-env = "hms_utils.aws_env:main"

hms-config = "hms_utils.config.config_cli:main" # new
hms-config-export = "hms_utils.config.config_cli:main_show_script_path"
hms-config-exports = "hms_utils.config.config_cli:main_show_script_path"

hms-portals = "hms_utils.portal.portal_envs:main" # new
hms-portal-view = "hms_utils.portal.view_portal_object:main"
hms-portal-update = "hms_utils.portal.update_portal_object:main"
hms-portal-indexing-status = "hms_utils.portal.indexing_status:main"
hms-portal-errors = "hms_utils.portal.portal_validation_errors:main"
hms-portal-reindex = "hms_utils.portal.portal_reindex_items:main"

hms-portal-items-without-consortia = "hms_utils.portal.portal_items_without_consortia:main"
hms-portal-add-consortia-to-items = "hms_utils.portal.portal_add_consortia_to_items:main"

# TODO: In progress; rewrite/refactor of hms-portal-view/hms-portal-update.
hms-portal-read = "hms_utils.portal.portal_read:main"
hms-portal-write = "hms_utils.portal.portal_write:main"

hms-encrypt= "hms_utils.cli.crypt_cli:main_encrypt"
hms-decrypt= "hms_utils.cli.crypt_cli:main_decrypt"

hmx-config = "hms_utils.hms_config:main"
hmx-config-script = "hms_utils.hms_config:main_show_script_path"
hmx-config-export = "hms_utils.hms_config:main_show_script_path"
hmx-config-exports = "hms_utils.hms_config:main_show_script_path"

publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
requires = ["setuptools>=74.0.0", "wheel"]
build-backend = "setuptools.build_meta"
